# sck-core-codecommit

./: README.md  pyproject.toml  pytest.ini
.github/: copilot-instructions.md
core_codecommit/: __init__.py  listener.py
tests/: test_listener.py
