[project]
name = "sck-core-codecommit"
version = "0.1.2-pre.6+2559c07"
description = "Core automation codecommit listener"
authors = [{name="James Barwick",email="jbarwick@eits.com.sg"}]
license = "MIT"
readme = "README.md"
maintainers = [{name="James Barwick",email="jbarwick@eits.com.sg"}]
keywords = ["sck", "core", "aws", "cloud", "automation"]
requires-python=">=3.11,<3.13"

dependencies = [
    "boto3 (>=1.34.51,<1.35.0)",
    "botocore (>=1.34.51,<1.35.0)",
    "requests>=2.32.3",
    "urllib3>=2.2.3",
    "sck-core-db",
    "sck-core-framework",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "flake8>=7.1.1",
    "cfn-lint>=1.22",
    "pytest-asyncio>=0.25.0",
    "boto3-stubs>=1.34.51",
    "pytest-dotenv>=0.5.2",
    "pytest-cov>=6.0.0",
    "black>=24.10.0",
]

[tool.hatch.build.targets.wheel]
packages = ["core_codecommit"]

[tool.black]
line-length = 132
target-version = ["py311"]
skip-string-normalization = true

# Use a proper multi-line regex (mirrors style used in framework module)
exclude = '''
/(
        \.git
    | \.mypy_cache
    | \.pytest_cache
    | build
    | dist
    | venv
    | \.venv
    | htmlcov
)/
'''

[tool.uv.sources]
sck-core-framework = { path = "../sck-core-framework", editable = true }
sck-core-db = { path = "../sck-core-db", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
